# Data_Science

./: pyproject.toml
01.basic_python/: api.py  main.py  pyproject.toml
02.Numpy and Pandas/: main.py  pandas_function.py  pyproject.toml
03.Titanic_dataset/: main.py  pandas.ipynb  pyproject.toml
04.jupyternoyebook/: main.ipynb  main.py  pyproject.toml
05.Outliers/: main.ipynb  main.py  outliers.ipynb  pyproject.toml
06.Scaling_and_T_test/: main.py  pyproject.toml  scaling.ipynb  t-test.ipynb
07.Scatter_plot/: PracticeProjectInsurance.ipynb  day07IrisDataset.ipynb  main.py  pyproject.toml  scatter.ipynb
08.FastAPI_and_Streamlit/: api.py  app.py  pyproject.toml
08.FastAPI_and_Streamlit/titanic_dataset/: api.py  app.py
09.Linear_Regression/: linear_regression.ipynb  main.py  pyproject.toml
10.Multiple_and_Polynomial_Regression/: Linear_regression.ipynb  main.py  polynominal_regression.ipynb  pyproject.toml
11.Decision_Tree(Iris)/: classification_decision_tree.ipynb  main.py  pyproject.toml
12.Confusion_matrix_Heatmap/: confusion_matrix.ipynb  multiple algo in titanic dataset.ows  predict.csv  pyproject.toml
13.Unsupervised_learning/: clustering.ipynb  pyproject.toml
