[project]
name = "data-science-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "01.basic_python",
    "02.Numpy and Pandas",
    "03.Titanic_dataset",
    "04.jupyternoyebook",
    "05.Outliers",
    "06.Scaling_and_T_test",
    "07.Scatter_plot",
    "08.FastAPI_and_Streamlit",
    "09.Linear_Regression",
    "10.Multiple_and_Polynomial_Regression",
]
